definitive overflow fix

--- a/styles/main-header.module.css
+++ b/styles/main-header.module.css
@@ -8,30 +8,30 @@
 }
 
 .gradient {
-    z-index: -1;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    pointer-events: none;
+    inset: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     user-select: none;
-    transform: translate(-50%, -50%) scaleX(1.2);
-    width: 100%;
-    max-width: 95vw;
-    overflow: hidden;
     pointer-events: none;
-    text-align: center;
+    z-index: -1;
 }
 
-.gradient img {
+.image-wrapper {
+    transform: scaleX(1.2);
+}
+
+.image-wrapper img {
     filter: blur(14px) contrast(1.12) saturate(0.8);
     transition: filter 0.4s;
 }
 
-[data-theme='dark'] .gradient img {
+[data-theme='dark'] .image-wrapper img {
     filter: grayscale(1) opacity(0.3);
 }
 
 .heading h1 {
     color: var(--title-color-invert);
-    font-size: min(calc(1.8em + 1vw), 15vh);
+    font-size: min(min(calc(2em + 0.6vw), 15vh), 2.5em);
 }
